fix: fix spacing between nav & hero in mobile & tablet

--- a/src/components/Home/HomeHero/HomeHero.scss
+++ b/src/components/Home/HomeHero/HomeHero.scss
@@ -210,3 +210,9 @@
     font-size: 0.75rem;
   }
 }
+
+@media (min-width: 320px) and (max-width: 1024px) {
+  .hero-container {
+    margin-top: 5rem;
+  }
+}
